# dishfinder

./: README.md  basic_script.py  clean_data.ipynb  db.sqlite3  manage.py  pyproject.toml  requirements.txt  test.ipynb
dishfinder/: asgi.py  settings.py  urls.py  wsgi.py
searchengine/: models.py  urls.py  views.py
searchengine/management/commands/: basic_script.py  insert_data_from_csv.py
searchengine/migrations/: 0001_initial.py  0002_rename_locaton_restaurant_location.py
searchengine/templates/: base.html  full_details.html  index.html
